--- a/architecture/CMakeLists.txt
+++ b/architecture/CMakeLists.txt
@@ -70,11 +70,11 @@ cs_export()
 if(CATKIN_ENABLE_TESTING)
 #   get_filename_component(TEST_WITH_DATA_TEST_DIR "test/data" ABSOLUTE)
 
-  #WIP
-  catkin_add_gtest(work_in_progress_architecture_tests 
-    test/work_in_progress_architecture_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(work_in_progress_architecture_tests ${catkin_LIBRARIES} )
+#   #WIP
+#   catkin_add_gtest(work_in_progress_architecture_tests 
+#     test/work_in_progress_architecture_tests.cpp
+#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+#   target_link_libraries(work_in_progress_architecture_tests ${catkin_LIBRARIES} )
 
   #MATH
   catkin_add_gtest(architecture_tests 
