--- a/lazy_theta_star/CMakeLists.txt
+++ b/lazy_theta_star/CMakeLists.txt
@@ -91,42 +91,42 @@ if (CATKIN_ENABLE_TESTING)
 #     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
 #   target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib_ortho)
 
-#   # Octree @ visibility ##
-#   catkin_add_gtest(visibilityTests 
-#     test/visibility_test.cpp
-#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-#   target_link_libraries(visibilityTests ${catkin_LIBRARIES} ltStar_lib_ortho)
-
-#   ## Lazy Theta Star @ orthogonal planes ##
-#   catkin_add_gtest(orthogonalPlanesTests 
-#     test/orthogonal_planes_tests.cpp
-#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-#   target_link_libraries(orthogonalPlanesTests ${catkin_LIBRARIES} ltStar_lib_ortho)
-
-#   ## Octree @ depth and size ##
-#   catkin_add_gtest(depthSizeTest 
-#     test/depth_voxelSide_tests.cpp
-#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-#   target_link_libraries(depthSizeTest ${catkin_LIBRARIES} ltStar_lib_ortho)
-
-
-#   ## Lazy Theta Star @ open ##
-#   catkin_add_gtest(openTests 
-#     test/open_tests.cpp
-#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-#   target_link_libraries(openTests ${catkin_LIBRARIES} )
-
-#   catkin_add_gtest(ltstarOrthoTests 
-#     test/lazyTheta_tests_ortho.cpp
-#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-#   target_link_libraries(ltstarOrthoTests ${catkin_LIBRARIES} ltStar_lib_ortho)
-
-
-  ## Lazy Theta Star @ Collect measurements for 3d puzzle ## 
-  catkin_add_gtest(collect_results_3d_puzzle_ortho 
-    test/collect_results_3d_puzzle_ortho.cpp
+  # Octree @ visibility ##
+  catkin_add_gtest(visibilityTests 
+    test/visibility_test.cpp
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(collect_results_3d_puzzle_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
+  target_link_libraries(visibilityTests ${catkin_LIBRARIES} ltStar_lib_ortho)
+
+  ## Lazy Theta Star @ orthogonal planes ##
+  catkin_add_gtest(orthogonalPlanesTests 
+    test/orthogonal_planes_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(orthogonalPlanesTests ${catkin_LIBRARIES} ltStar_lib_ortho)
+
+  ## Octree @ depth and size ##
+  catkin_add_gtest(depthSizeTest 
+    test/depth_voxelSide_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(depthSizeTest ${catkin_LIBRARIES} ltStar_lib_ortho)
+
+
+  ## Lazy Theta Star @ open ##
+  catkin_add_gtest(openTests 
+    test/open_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(openTests ${catkin_LIBRARIES} )
+
+  catkin_add_gtest(ltstarOrthoTests 
+    test/lazyTheta_tests_ortho.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(ltstarOrthoTests ${catkin_LIBRARIES} ltStar_lib_ortho)
+
+
+#   ## Lazy Theta Star @ Collect measurements for 3d puzzle ## 
+#   catkin_add_gtest(collect_results_3d_puzzle_ortho 
+#     test/collect_results_3d_puzzle_ortho.cpp
+#     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+#   target_link_libraries(collect_results_3d_puzzle_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
 #   catkin_add_gtest(collect_results_3d_puzzle_sparse 
 #     test/collect_results_3d_puzzle_sparse.cpp
 #     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
